<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="ufC-wZ-h7g">
            <objects>
                <viewController storyboardIdentifier="ViewController" id="vXZ-lx-hvc" customClass="ViewController" customModule="PopupDialog_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="colorful_background" translatesAutoresizingMaskIntoConstraints="NO" id="yCg-ou-HQf">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ib-rL-PNU">
                                <rect key="frame" x="20" y="602" width="335" height="45"/>
                                <color key="backgroundColor" red="0.99607843139999996" green="1" blue="1" alpha="0.80479525862068968" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="jAD-W4-dOg"/>
                                </constraints>
                                <state key="normal" title="Show Custom Dialog"/>
                                <connections>
                                    <action selector="showCustomDialogTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ljp-Uc-fvI"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7G-uG-kym">
                                <rect key="frame" x="20" y="543" width="335" height="45"/>
                                <color key="backgroundColor" red="0.99607843139999996" green="1" blue="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Show Standard Dialog + Background Image"/>
                                <connections>
                                    <action selector="showStandardDialogWithBackgroundImageTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="aCm-6Y-Js9"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UWW-W3-vVg">
                                <rect key="frame" x="20" y="484" width="335" height="45"/>
                                <color key="backgroundColor" red="0.99607843139999996" green="1" blue="1" alpha="0.79816810344827582" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Show Standard Dialog"/>
                                <connections>
                                    <action selector="showStandardDialogTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Cnf-7O-6vh"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap the buttons!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUr-OR-AC7">
                                <rect key="frame" x="20" y="52" width="335" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iV3-Vk-i0J">
                                <rect key="frame" x="20" y="425" width="335" height="45"/>
                                <color key="backgroundColor" red="0.99607843139999996" green="1" blue="1" alpha="0.7981681034" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Show Image Dialog"/>
                                <connections>
                                    <action selector="showImageDialogTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="3nt-Y3-5kq"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="1Ib-rL-PNU" firstAttribute="top" secondItem="d7G-uG-kym" secondAttribute="bottom" constant="14" id="0Ub-Ew-9kD"/>
                            <constraint firstAttribute="trailing" secondItem="yCg-ou-HQf" secondAttribute="trailing" id="0WO-uG-XCW"/>
                            <constraint firstItem="1Ib-rL-PNU" firstAttribute="height" secondItem="d7G-uG-kym" secondAttribute="height" id="0jw-KY-do1"/>
                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="yCg-ou-HQf" secondAttribute="bottom" id="0sN-bz-fuy"/>
                            <constraint firstItem="d7G-uG-kym" firstAttribute="top" secondItem="UWW-W3-vVg" secondAttribute="bottom" constant="14" id="8Ho-Y3-WvF"/>
                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="1Ib-rL-PNU" secondAttribute="bottom" constant="20" id="AyH-mH-6Gi"/>
                            <constraint firstItem="1Ib-rL-PNU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="d7G-uG-kym" secondAttribute="leading" id="B9Q-Ea-aA1"/>
                            <constraint firstItem="PUr-OR-AC7" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="FE7-kI-sSi"/>
                            <constraint firstItem="d7G-uG-kym" firstAttribute="width" secondItem="UWW-W3-vVg" secondAttribute="width" id="IV3-YY-k6T"/>
                            <constraint firstItem="d7G-uG-kym" firstAttribute="height" secondItem="UWW-W3-vVg" secondAttribute="height" id="JWw-Fa-DGU"/>
                            <constraint firstAttribute="trailing" secondItem="UWW-W3-vVg" secondAttribute="trailing" constant="20" id="N42-3Q-6Ls"/>
                            <constraint firstItem="iV3-Vk-i0J" firstAttribute="leading" secondItem="UWW-W3-vVg" secondAttribute="leading" id="NXe-bj-mvs"/>
                            <constraint firstAttribute="trailing" secondItem="d7G-uG-kym" secondAttribute="trailing" constant="20" id="Qri-de-IEc"/>
                            <constraint firstItem="UWW-W3-vVg" firstAttribute="top" secondItem="iV3-Vk-i0J" secondAttribute="bottom" constant="14" id="TFw-vV-GHM"/>
                            <constraint firstItem="d7G-uG-kym" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UWW-W3-vVg" secondAttribute="leading" id="VYV-nL-PHX"/>
                            <constraint firstAttribute="trailing" secondItem="PUr-OR-AC7" secondAttribute="trailing" constant="20" id="Z5n-KK-G7h"/>
                            <constraint firstItem="1Ib-rL-PNU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="ad3-v2-SFT"/>
                            <constraint firstItem="1Ib-rL-PNU" firstAttribute="width" secondItem="d7G-uG-kym" secondAttribute="width" id="hLd-MW-vXX"/>
                            <constraint firstItem="yCg-ou-HQf" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="kxT-O9-Khq"/>
                            <constraint firstItem="iV3-Vk-i0J" firstAttribute="trailing" secondItem="UWW-W3-vVg" secondAttribute="trailing" id="qei-WQ-fGj"/>
                            <constraint firstAttribute="trailing" secondItem="1Ib-rL-PNU" secondAttribute="trailing" constant="20" id="sel-EO-jmj"/>
                            <constraint firstItem="yCg-ou-HQf" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="vUy-fM-eSF"/>
                            <constraint firstItem="iV3-Vk-i0J" firstAttribute="height" secondItem="1Ib-rL-PNU" secondAttribute="height" id="x5H-FA-OfN"/>
                            <constraint firstItem="PUr-OR-AC7" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="32" id="z9O-vl-xIT"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="label" destination="PUr-OR-AC7" id="maG-JJ-iw4"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="162" y="287"/>
        </scene>
    </scenes>
    <resources>
        <image name="colorful_background" width="375" height="667"/>
    </resources>
</document>
