...
// ----------------------------

import Foundation

/**
 
 Returns the word "Rating" in user's language. It is used for voice-over  in accessibility mode.
 
 */
struct CosmosLocalizedRating {
    static var defaultText = "Rating"
    
    static var localizedRatings = [
...
